logs/dag_id=process_employees/run_id=manual__2024-10-03T23:56:21.453135+00:00/task_id=create_reservas_temp_table/attempt=1.log
[2024-10-03T23:56:35.245+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-10-03T23:56:35.864+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: process_employees.create_reservas_temp_table manual__2024-10-03T23:56:21.453135+00:00 [queued]>
[2024-10-03T23:56:36.053+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: process_employees.create_reservas_temp_table manual__2024-10-03T23:56:21.453135+00:00 [queued]>
[2024-10-03T23:56:36.057+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 1
[2024-10-03T23:56:39.412+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): create_reservas_temp_table> on 2024-10-03 23:56:21.453135+00:00
[2024-10-03T23:56:39.478+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=31945) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-10-03T23:56:39.487+0000] {standard_task_runner.py:63} INFO - Started process 31952 to run task
[2024-10-03T23:56:39.545+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'process_employees', 'create_reservas_temp_table', 'manual__2024-10-03T23:56:21.453135+00:00', '--job-id', '227', '--raw', '--subdir', 'DAGS_FOLDER/etl_prueba.py', '--cfg-path', '/tmp/tmpou9dntr4']
[2024-10-03T23:56:39.564+0000] {standard_task_runner.py:91} INFO - Job 227: Subtask create_reservas_temp_table
[2024-10-03T23:56:40.233+0000] {task_command.py:426} INFO - Running <TaskInstance: process_employees.create_reservas_temp_table manual__2024-10-03T23:56:21.453135+00:00 [running]> on host 5e909a8df6c4
[2024-10-03T23:56:41.912+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='process_employees' AIRFLOW_CTX_TASK_ID='create_reservas_temp_table' AIRFLOW_CTX_EXECUTION_DATE='2024-10-03T23:56:21.453135+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-10-03T23:56:21.453135+00:00'
[2024-10-03T23:56:41.915+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-10-03T23:56:41.917+0000] {sql.py:276} INFO - Executing: 
            DROP TABLE IF EXISTS reservas_temp
            CREATE TABLE employees_temp (
                "idVariable" NUMERIC PRIMARY KEY,
                "fecha" Date,
                "valor" float
            );
[2024-10-03T23:56:42.030+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-10-03T23:56:42.114+0000] {base.py:84} INFO - Using connection ID 'postgres' for task execution.
[2024-10-03T23:56:42.214+0000] {sql.py:470} INFO - Running statement: 
            DROP TABLE IF EXISTS reservas_temp
            CREATE TABLE employees_temp (
                "idVariable" NUMERIC PRIMARY KEY,
                "fecha" Date,
                "valor" float
            );, parameters: None
[2024-10-03T23:56:42.246+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-10-03T23:56:42.253+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 418, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 475, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 3:             CREATE TABLE employees_temp (
                    ^

[2024-10-03T23:56:42.386+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=process_employees, task_id=create_reservas_temp_table, run_id=manual__2024-10-03T23:56:21.453135+00:00, execution_date=20241003T235621, start_date=20241003T235635, end_date=20241003T235642
[2024-10-03T23:56:42.496+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 227 for task create_reservas_temp_table (syntax error at or near "CREATE"
LINE 3:             CREATE TABLE employees_temp (
                    ^
; 31952)
[2024-10-03T23:56:42.604+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-10-03T23:56:42.815+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/models/baseoperator.py:1296 AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
[2024-10-03T23:56:43.272+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-10-03T23:56:43.393+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
